# bollard

./: .flake8  .gitignore  License  README.md  pyproject.toml
.github/workflows/: test.yml
bollard/: __init__.py  __main__.py  constants.py  misc.py
bollard/core/: __init__.py  group.py  logging.py  main.py
bollard/image/: __init__.py  base.py  data.py  display.py  ls.py  rm.py  selector.py
bollard/utils/: __init__.py  docker.py  format.py  name.py  params.py  subprocess.py  table.py
tests/: conftest.py  test_misc.py
tests/core/: test_group.py
tests/image/: test_image_data.py  test_image_display.py  test_image_ls.py  test_image_rm.py  test_image_selector.py
tests/utils/: test_docker.py  test_format.py  test_name.py  test_params.py  test_process.py  test_subprocess.py  test_table.py
