[tool.poetry]
name = "bollard"
version = "0.1.1"
description = "Wrapper for docker command that provide handful options and alias"
authors = ["Tzu-Ting <tzingshih@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tabulate = {version = "^0.9.0", extras = ["widechars"]}
humanize = "^4.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
freezegun = "^1.2.2"

[tool.poetry.scripts]
bollard = "bollard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=bollard --cov-report xml --cov-report=term-missing"
